create branch, KWOrigin to keep latest ui source codes from KW

--- a/iDocShare_src/iDocShareDist/Classes/Browser Resources/unable_to_connect.html
+++ b/iDocShare_src/iDocShareDist/Classes/Browser Resources/unable_to_connect.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id='content'>
-        Unable to connect :(￼￼￼￼￼
+        Unable to connect ￼￼￼
     </div>
   </body>
 </html>
